--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -60,16 +62,20 @@
 <section id="slider">
     <div class="container">
             <div class="col-sm-6 mt-5">
-                <h2><b>Fuel Your Passion</b></h2>
-                <h3>Discover the Magic in Every Cup</h3>
-                <h6>Welcome to our coffee paradise, where every bean tells a story<br> and every cup sparks.</h6>
+                <h2 data-aos="fade-up" data-aos-duration="1200"><b>Fuel Your Passion</b></h2>
+                <h3 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="100">Discover the Magic in Every Cup</h3>
+                <h6 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">Welcome to our coffee paradise, where every bean tells a story<br> and every cup sparks.</h6>
                 <p>
-                <button class="btn1">Order Online</button>
-                <button class="btn2">Book A Table</button>
+                <button class="btn1" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">Order Online</button>
+                <button class="btn2" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">Book A Table</button>
                 </p>
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script>
+                  AOS.init();
+                </script>
             </div>
             <div class="col-sm-6">
-                <img src="images/cofffee_image.png" class="img-fluid">
+                <img src="images/cofffee_image.png" class="img-fluid" data-aos="zoom-in" data-aos-duration="1200">
             </div>
     </div>    
 </section> 
